app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */
 @import "base/reset.scss";





  body {
    // font-family: 'Abel', sans-serif;
    // font-family: 'Bungee Shade', cursive;
    // font-family: 'Gloria Hallelujah', cursive;
    // font-family: 'Permanent Marker', cursive;
    // font-family: 'Passion One', cursive;
    // font-family: 'Shrikhand', none;
    font-family: 'Roboto', sans-serif;
  }


  .player-container {
    background-color: #fafafa;
    font-size: 20px;
    display: flex;
    list-style: none;


  }

  .hidden-playbar {
    background-color: #2687FB;
    position:fixed;
    bottom:0px;
    left:0px;
    right:0px;
    margin-bottom:0px;
    max-height: 0px;
    transition: max-height 3s;
  }

 .button {
  font-size: 20px;
  line-height: 1.8;
  appearance: none;
  box-shadow: none;
  border-radius: 10;
  color: #fff;
  background-color: #2687FB;
  border-radius: 5px;
  border: none;
  text-align: center;
  height:50px;
  box-shadow: -2px 2px 2px grey;
}

.button:hover {
      box-shadow: -5px 5px 5px grey;
}


.form-button-container{
  width: 200px;
    height: 50px;
}

.button:hover {
  cursor: pointer;
  outline: none;
}

.home-vinyl {
  height: 35px;
}





 header {
   margin-left: 5%;
   background-color: white;
 }


 h1, h5 {
   background-color: white;
 }



 .session {
   color: #6295CA;
   font-weight: bold;
 }

.header-line {
    height: 50px;
    border-left: solid 1px #dbd2d2;
    width: 1px;
    position: relative;
    top: 9px;
    left: 2px;
}




 .header-name {
   font-size: 50px;
    font-weight: bold;
    font-style: oblique;
    display: flex;
    flex-direction: row;;
 }

 .player-image {
   width: 60px;
    height: 60px;
    padding-right: 10px;
 }

 .player-text {
   padding-top: 10px
 }
 .player-title {
    font-size: 18px;
    position: relative;
    bottom: 5px;
 }
 .player-artist {
   color: grey;
    font-size: 16px;
    font-weight: normal;
 }

 .player-audio {
   padding-top: 15px;
   display:flex;
   flex-direction: row;
 }


 .header-container {
   display: flex;
    height: 70px;
    background-color: white;
    width: 100%;
    background-color: white;
    position: absolute;
    justify-content: space-between;
    z-index: 1;
    top: 0;
    position: relative;
    border-bottom-style: solid;
    border-width: 1px;
    border-color:grey;
 }


.header-group-left {
  height: 50px;
    background-color: white;
    width: 100%;
    margin: 0px auto;
    background-color: white;
    justify-content: left;
}


.header-group-right {
  height: 40px;
    background-color: white;
    width: 100%;
    margin: 0px auto;
    background-color: white;
    display: flex;
    justify-content: flex-end;
    width: 400px;
    margin: 20px;
    margin-bottom: 30px;

    img:hover {
      cursor: pointer;
    }

}


.header-button {
  float: right;
  background-color: white;
}




 .create-form-box {
   padding: 20px;
    background-color: white;
    text-align: left;
    z-index: 3;
    border-radius: 10px;
    position: absolute;
    top: -100px;
    width: 230px;
    box-shadow: -5px 5px 5px #c9c5c5;

 }




 .opaque-background {
  //  background-color: rgba(255, 255, 255, 0.4);
   width: 100%;
   margin-top: 10px;
 }





.image1 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  border-top-style: solid;
  border-left-style: solid;
  border-bottom-style: solid;
  border-width: 1px;
  border-color:grey;
  box-shadow: -2px 2px 2px grey;
}

.image2 {
  position: absolute;
    top: 30px;
    left: 72px;
    z-index: 2;
    height: 340px;
    width: 340px;
    outline: none;
    border: 0;
    box-shadow: 10px 0px 30px;
}




.add-post-button {
  position: relative;
  height: 70px;
  width: 70px;
  border-style: none;
  float: right;
  background-color: #6295CA;
  border-radius: 35px;
  margin-top: 10px;
  margin-right: 25px;
  box-shadow: -3px 3px 3px grey;
  outline: none;
}

.add-post-button:hover {
    box-shadow: -6px 6px 6px grey;
}

.add-button {
  position: absolute;
    height: 70px;
    width: 70px;
    border-style: none;
    float: right;
    top: 305px;
    left: 440px;
}

.links-container {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  width: 100%;
  right: 0px;
  bottom: 8%;
  color: #33495F;
  transform: scale(0.8);

  a {
    margin: 10px;
    padding: 0px 3px;
  }

}

.footer-links {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
  }

  .logo-header {
    width: 60px;
    height: 60px;
    padding-top: 5px
  }


  a:hover {
    cursor: pointer;
  }


audio {
  //  height: 50px;
    position: absolute;
    right: 30px;
    width: 50%;
    display: flex;
    justify-content: flex-end;
}

.greeting-profile {
  height: 40px;
    bottom: 12px;
    left: 9px;
    display: flex;
    position: relative;
}

.greeting-logout {
  position: relative;
    height: 36px;
    right: 10px;
    top: 3px;
}

.greeting-feed {
  height: 40px;
    bottom: 12px;
    position: relative;
    right: 65px;
}




.home_background {

  height: 100%;
  width: 100%;
}



.feed_background {
  position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 150px;
}

.personal-sites {
  display: flex;
  position: relative;
  justify-content: center;
  bottom: -15%;
  color: #33495F;

}


.feed_group {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  text-align: left;
}

.post-grid-content {
  justify-content: center;
    display: flex;
    flex-direction: column;
    height: 100%;
    position: relative;
    align-items: center;
}



.footer_artist {
    display: list-item;
    text-align: -webkit-match-parent;
    list-style: none;
}

.footer_title {
    display: list-item;
    text-align: -webkit-match-parent;
    font-size: 20px;
}


.logo-text {
  font-family: 'Bungee Shade', cursive;
  padding-left: 15px;
  padding-bottom: 15px;
}

.container {
  position: relative;
  width: 100%;
  z-index: 0;
}

.container:hover {
  z-index: 50;
}

.modal-container {
  position: relative;
  width: 100%;
  z-index: 0;
}

.modal-container:hover {
  z-index: 50;
}




.image {
  opacity: 1;
  display: block;
  width: 100%;
  height: auto;
  transition: .5s ease;
  backface-visibility: hidden;
  width: 620px;
  height: 620px;
  border-style: solid;
  border-width: 1px;
  border-color:grey;
  box-shadow: -3px 0px 3px grey;
}

.create-title {
  text-align: center;
  margin-top: 5px;
  margin-bottom: 5px;
  font-weight: bold;
  font-size: 20px;
}

.welcome-descriptions {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 150px;
  background-color: #8d929a;

}

.welcome-subcontainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 33%;
  z-index: 3;
  background-color: white;
  border-left: 1px solid black;
  border-right: 1px solid black;
  margin-left: 5px;
  margin-right: 5px;
  opacity: 0.90;
}

.a:hover {
  cursor: pointer;
}

.middle {
  opacity: 0;
  position: absolute;
  top: 0px;
  height: 100%;
  width: 100%;
  transition: .1s ease;
  display: flex;
  justify-content: flex-end;
}


.session-play {
  color: white;
  height: 40px;
  position: relative;
  opacity: 0.8;
  align-self: center;
  padding-right: 5px;
  padding-bottom: 5px;
  top: 40px;

}

.session-play:hover{
  cursor: pointer;
  opacity: 1;
}
.post-play {
  color: white;
    height: 120px;
    position: absolute;
    display: flex;
    align-self: flex-end;
    padding-bottom: 30px;
    opacity: 0.8;
}





.session_middle {
  transition: .5s ease;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 100%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%)
}

.container:hover .image {
  opacity: 0.95;
}

.container:hover .middle {
  opacity: 1;
}

.post-play:hover{
  cursor: pointer;
  opacity: 1;
}



.play {
    height: 60px;
    display: flex;
    align-self: flex-end;
    padding-bottom: 5px;
    padding-right: 5px;
    opacity: 0.8;

}

.play:hover{
  cursor: pointer;
  opacity: 1;
}

.modal-icon-container {
  display: flex;
    height: 100%;
    width: 100%;
}

.play-icon-container {
    display: flex;
    height: 100%;
    width: 100%;
    position: absolute;
    justify-content: flex-end;
}


.modal-icon {
  color: white;
   width: 60px;
   height: 60px;
   display: flex;
    position: absolute;
    right: 5px;
    top: 5px;
    z-index: 50;
    opacity: 0.8;

}

.modal-icon:hover{
  cursor: pointer;
  opacity: 1
}

.slider-container {
    width: 100%;
    color: #333;
    background: #419be0;
}

.slider-img {
  width: 100%;
  height: 40%;

  position: relative;
}

.carousel {
  position: relative;
  width: 100%;
  height: 60%;
}


.carousel-text {
  color: white;
    border-width: 1px;
    border-color: black;
    background-color: #33495F;
    z-index: 6;
    position: absolute;
    font-size: 35px;
    top: 15%;
    font-weight: normal;
    padding: 30px;
    margin-left: 30px;
    width: 500px;
    height: 80px;
}

.scroll-play {
   position: relative;
   top: 15px;
   font-size: 33px;
   color: #33495F;
   font-weight: bold;
   //text-shadow: -2px 2px #000000;
}

.scroll-container {
  position: fixed;
    display: flex;
    flex-direction: row;
    left: -10%;
    bottom: 25%;
    color: white;
}

.arrow {
  height: 60px;
    position: relative;
    /* top: 6px; */
    transform: scale(2);

}

.footer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: fixed;
    display: flex;
    bottom: 0px;
    width: 100%;
    margin-bottom: 0px;
    background-color: white;
    letter-spacing: 3px;
    height: 40%;

}

.footer-text {
  color: #33495F;
    display: flex;
    position: relative;
    justify-content: flex-start;
    font-weight: bold;
    text-align: center;
    background-color: inherit;
    font-size: 25px;
    bottom: 15%;
    padding: 15px;
  //text-shadow: -2px 2px #000000;
}

*:focus {
    outline: none;
}




.background-image {
  position: fixed;
  left: 0;
  right: 0;
  z-index: 0;

  display: block;
  background-image: url("http://res.cloudinary.com/dccshngpp/image/upload/v1497649598/album-covers-collage_rqjjx8.jpg");
  width: 100%;
  height: 100%;

  -webkit-filter: blur(5px);
  -moz-filter: blur(5px);
  -o-filter: blur(5px);
  -ms-filter: blur(5px);
  filter: opacity(0.2) blur(5px)
}



.content {
  left: 0;
  right: 0;
  z-index: 9999;
}

.close-player {
  border: none;
 outline: none;
  height: 40px;
 display: flex;
 justify-content: center;
  align-self: center;
 margin-left: 10px;
 margin-right: 10px;
}
.close-img {
  height: 10px;
  width: 10px;
}


.footer-playbar {
   display: flex;
    flex-direction: row;
    position:fixed;
    bottom:0px;
    left:0px;
    right:0px;
    height: 60px;
    margin-bottom:0px;
    background-color: #fafafa;
    overflow: scroll;
    transition: max-height 3s;
    border-top-style: solid;
    border-width: 1px;
    border-color:lightgrey;
    z-index: 300;

}
.react-audio-player undefined {
  background-color: #eeeded;
    opacity: 0.9;
}

